--- a/vueapp/index.html
+++ b/vueapp/index.html
@@ -11,6 +11,21 @@
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyALidAyiL-gTK_xvcPKPRSpmpTuyEI9prs",
+        authDomain: "jsm2019-ffe72.firebaseapp.com",
+        databaseURL: "https://jsm2019-ffe72.firebaseio.com",
+        projectId: "jsm2019-ffe72",
+        storageBucket: "",
+        messagingSenderId: "1085322579037"
+      };
+      firebase.initializeApp(config);
+    </script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">  </head>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
