--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <title>JSM 2019</title>
-    <link rel="icon" href="faviconWhite.ico" type="image/x-icon"/>
+    <link rel="icon" href="FaviconWhite.png" type="image/x-icon"/>
     <!-- Roboto Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
     <!-- fontawesome -->
