--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
 
     <title>JSM 2019</title>
     <link rel="icon" href="FaviconWhite.png" type="image/x-icon"/>
+
+    <meta name="description" content="Wilkommen zur Junioren Schweizermeisterschaft 2019 im Segelflug vom 1.5 - 5.5! Wir freuen uns euch in Dittingen begrüssen zu dürfen.">
+
+
+
     <!-- Roboto Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
     <!-- fontawesome -->
